force-app/main/default/objects/Warehouse_Inventory__c/Warehouse_Inventory__c.object-meta.xml
<CustomObject>
    <label>Freelance Invoice</label>
    <nameField>
        <displayFormat>SP-{000}</displayFormat>
        <label>Warehouse Inventory no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freelance Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>