force-app/main/default/objects/Warehouse_Inventory__c/fields/issue_Date__c.field-meta.xml
<CustomField>
    <fullName>issue_Date__c</fullName>
    <label>issue Date</label>
    <type>Date</type>
</CustomField>