force-app/main/default/objects/Warehouse_Inventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Warehouse_Inventory__c</referenceTo>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>