force-app/main/default/objects/Warehouse_Inventory__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Warehouse_Inventries</relationshipName>
    <type>Lookup</type>
</CustomField>