force-app/main/default/objects/Warehouse_Inventory__c/fields/Result_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Result_Stocks__c</fullName>
    <label>Result Stocks</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>