force-app/main/default/objects/Warehouse_Inventory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>